[project]
name = "molecule-tox-image"
version = "1.0.0"
description = "Docker image dependencies for Ansible Molecule testing with tox"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Core testing tools
    "tox>=4.27.0",
    "tox-gh-actions>=3.3.0",

    # Ansible and Molecule
    "ansible-core>=2.16,<2.18",
    "molecule[docker]>=25.6.0",
    "molecule[podman]>=25.6.0",

    # Docker support
    "docker>=7.1.0",
    "testinfra>=6.0.0",

    # Linting tools
    "ansible-lint>=25.6.0",
    "yamllint>=1.37.0"
]

[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "isort>=6.0.0",
    "mypy>=1.17.0",
    "pre-commit>=4.2.0",
]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
