[project]
name = "molecule-tox-image"
version = "1.0.0"
description = "Docker image dependencies for Ansible Molecule testing with tox"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Core testing tools
    "tox>=4.0.0",
    "tox-gh-actions>=3.0.0",

    # Ansible and Molecule
    "ansible-core>=2.12,<2.16",
    "molecule[docker]>=4.0.0",
    "molecule[podman]>=4.0.0",

    # Docker support
    "docker>=6.0.0",
    "testinfra>=6.0.0",

    # Linting tools
    "ansible-lint>=6.0.0",
    "yamllint>=1.26.0"
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
